name:
  timestamp
version:
  0.1
-- synopsis:

-- category:
--   Streaming, Database
homepage:
  https://github.com/metrix-ai/timestamp
bug-reports:
  https://github.com/metrix-ai/timestamp/issues
author:
  Oleg Shevchenko <shevchenko.cmc@gmail.com>
maintainer:
  Metrix.AI Ninjas <ninjas@metrix.ai>
copyright:
  (c) 2018, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >= 1.24

source-repository head
  type:
    git
  location:
    https://github.com/metrix-ai/timestamp.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Timestamp.Data.Conversion
    Timestamp.Data.TypesAndInstances
    Timestamp.Prelude
  other-modules:

  build-depends:
    attoparsec >=0.13 && <0.14,
    cereal >=0.5.4 && <0.6,
    directory >=1.3 && <2,
    eternity >=0.1 && <0.2,
    hashable >=1.2 && <2,
    potoki >=0.11 && <0.12,
    QuickCheck >=2.8.1 && <3,
    text >=1 && <2,
    time >=1.8 && <2,
    base,
    foldl,
    generic-random,
    rebase
